Added test for release info parsing.